--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.0",
     "grunt-npm-install": "^0.1.0",
-    "load-grunt-tasks": "^0.5.0",
-    "grunt-autoprefixer": "^1.0.1"
+    "load-grunt-tasks": "^0.5.0"
   }
 }
