--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "^0.10.0", 
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-sass": "^0.7.3",
+    "grunt-sass": "^0.14.2",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.0",
     "grunt-npm-install": "^0.1.0",
